style.css
/* @override 
	http://localhost/web/wordpress/wp-content/themes/bridgepdx/style.css
	http://opensourcebridge.org/wp-content/themes/osbp_wordpress_theme_v3/style.css
*/

/*
THEME NAME: Open Source Bridge
THEME URI: http://www.bridgepdx.org
DESCRIPTION: A theme for the open source bridge conference.
VERSION: 3.0
AUTHOR: Reid Beels
AUTHOR URI: http://reidab.com
TAGS: sandbox, microformats, hcard, hatom, xoxo, widgets, blank slate, starter theme, minimalist, developer
*/

/* @group Blog Styles */

.entry-title,.entry-meta,.entry-content {
	clear: left;
}

div.entry-date {
	padding: .4em 0;
	margin-bottom: .5em;
	float: ;
}

.entry-date,
.entry-meta {
	color: #6394b2;
	font-size: .9em;
}

.post {
	margin-bottom: 3em;
}

/* @group Comment Form */

/* Comment styles not used due to intense debate

form#commentform .form-label {
	margin: 1em 0 0;
}

form#commentform,form#commentform p {
	padding: 0;
}

input#author,input#email,input#url,textarea#comment {
	padding: 0.2em;
}

div.comments ol li {
	margin: 0 0 3.5em;
}

textarea#comment {
	height: 13em;
	margin: 0 0 0.5em;
	overflow: auto;
	width: 66%;
}

*/

/* @end */

/* @group Basic WP Gallery Styles */

div.gallery {
	clear: both;
	height: 180px;
	margin: 1em 0;
	width: 100%;
}

p.wp-caption-text {
	font-style: italic;
}

div.gallery dl {
	margin: 1em auto;
	overflow: hidden;
	text-align: center;
}

div.gallery dl.gallery-columns-1 {
	width: 100%;
}

div.gallery dl.gallery-columns-2 {
	width: 49%;
}

div.gallery dl.gallery-columns-3 {
	width: 33%;
}

div.gallery dl.gallery-columns-4 {
	width: 24%;
}

div.gallery dl.gallery-columns-5 {
	width: 19%;
}

div.gallery dl,div.navigation div.nav-previous {
	float: left;
}

div.gallery * {
	margin: 0;
	padding: 0;
}

/* @end */

/* @group WP Page Navigation */

div#nav-above {
	display: none;
}

div#nav-below {
	margin: 1em 0 2em;
}

div#nav-images {
	height: 150px;
	margin: 1em 0;
}

div.navigation {
	height: 1.25em;
}

div.navigation div.nav-next {
	float: right;
	text-align: right;
}

input#author,input#email,input#url,div.navigation div {
	width: 50%;
}

/* @end */

div.sidebar input#s {
	width: 10em;
}


/* @end */

/* @group Front Page */

#frontpage_info strong {
	font-family: 'Helvetica Neue', Arial, Helvetica, sans-serif;
}

#frontpage_info h2 {
	color: #222;
	font-size: 1.65em;
}

#frontpage_sidebar {
	width: 225px;
	float: left;
}

#conference-summary {
	margin-bottom: 2.5em;
}

#frontpage_content {
	background: #fff;
	padding: 15px;
	width: 510px;
	margin-left: 240px;
}

#frontpage_content h4 {
	font-weight: bold;
	margin: 0;
}

#frontpage_callouts {
	float: right;
	width: 160px;
	font-family: 'Helvetica Neue', Arial, Helvetica, sans-serif;
}

#frontpage_blog {
	clear: left;
	background: #fff;
	padding: 10px;
	width: 760px;
}

#frontpage_blog .post {
	margin: 20px 60px 0 30px;
}

/* @end */

table.sponsors {
	width: 100%;
	margin: 1em 0 3em;
}

table.sponsors td {
	width: 50%;
	text-align: center;
	padding: 1em 0;
}

#sponsors-callout {
	margin: 0 0 2em;
}

#sponsors-callout ul {
	margin: 0 0 1em 0;
}

#sponsors-callout li {
	list-style: none;
}

#frontpage-countdown {
	background: #4DA694;
	color: #fff;
	padding: 10px;
	position: relative;
	margin-bottom: 1.5em;
}

#frontpage-countdown h3 {
	font-weight: bold;
	color: #fff;
}

#frontpage-countdown a.button,
#frontpage-countdown a.button:link,
#frontpage-countdown a.button:visited,
#frontpage-countdown a.button:active {
	display: block;
	text-align: center;
	font-weight: bold;
	padding: .5em;
	background: #3E8577;
	color: #fff;
	text-decoration: none;
	width: 120px;
	position: absolute;
	right: 1em;
	top: 0;
}

